@@ -3,4 +3,5 @@ if not LHMP then return end
 
 LHMP.IgnoredQuests = {
     [59583] = true,
+    [60343] = true,
 }
